hotfix(github-comment-ops): correct tls host
Fixup of #2631

--- a/config/ext_github-comment-ops.yaml
+++ b/config/ext_github-comment-ops.yaml
@@ -12,4 +12,4 @@ ingress:
   tls:
     - secretName: github-comment-ops-tls
       hosts:
-        - webhook-github-comment-ops
+        - webhook-github-comment-ops.jenkins.io
