--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -129,6 +129,18 @@ controller:
                         resourceRequestMemory: "512Mi"
                         alwaysPullImage: true
                     yamlMergeStrategy: "merge"
+                  - name: jnlp-beta
+                    nodeSelector: "kubernetes.io/os=linux"
+                    containers:
+                      - name: jnlp-beta
+                        image: "jenkinsciinfra/jenkins-agent-ubuntu-20.04"
+                        resourceLimitCpu: "500m"
+                        resourceLimitMemory: "512Mi"
+                        resourceRequestCpu: "500m"
+                        resourceRequestMemory: "512Mi"
+                        alwaysPullImage: true
+                    yamlMergeStrategy: "merge"
+                    label: "ubuntu-20-04-beta"
                   - name: jnlp-windows
                     nodeSelector: "kubernetes.io/os=windows"
                     instanceCap: 5 # Usual sizing is 2 pods per Windows node, and max 3 windows nodes
