--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -316,7 +316,7 @@ controller:
                   monitoring: false
                   numExecutors: 1
                   remoteAdmin: "Administrator"
-                  remoteFS: "C:\\Jenkins"
+                  remoteFS: "C:/Jenkins"
                   securityGroups: "ec2_agents_infraci"
                   stopOnTerminate: false
                   t2Unlimited: false
@@ -328,7 +328,7 @@ controller:
                   - name: "jenkins"
                     value: "infra.ci.jenkins.io"
                   tenancy: Default
-                  tmpDir: "C:\\\\Temp"                          # Mandatory because EC2 plugins assumes SSH = Unix and searches for /tmp
+                  tmpDir: "C:/Temp"                          # Mandatory because EC2 plugins assumes SSH = Unix and searches for /tmp
                   type: T3Medium
                   useEphemeralDevices: true
       ldap-settings: |
