--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -306,7 +306,7 @@ controller:
                   hostKeyVerificationStrategy: ACCEPT_NEW     # TODO: set it CHECK_NEW_HARD (slower but safer)
                   idleTerminationMinutes: "30"                # Windows instances are billed per hour, let's reuse
                   instanceCapStr: "50"
-                  javaPath: "C:/tools/jdk-11/bin/java"
+                  javaPath: "C:/tools/jdk-11/bin/java.exe"
                   labelString: "windows windows-amd64 windows-amd64-docker docker-windows"
                   launchTimeoutStr: "600"                     # Wait for Windows to start all the EC2 launch services
                   maxTotalUses: 10                            # Windows instances are billed per hour, let's reuse
