fix: add pathType

--- a/config/nginx-proxy-azure.yaml
+++ b/config/nginx-proxy-azure.yaml
@@ -12,6 +12,7 @@ ingress:
     - host: repo.azure.jenkins.io
       paths:
         - path: /
+          pathType: Prefix
   tls:
     - secretName: nginx-proxy-azure-tls
       hosts:
