--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -274,3 +274,12 @@ releases:
       - "../config/artifact-caching-proxy-azure.yaml"
     secrets:
       - "../secrets/config/artifact-caching-proxy/secrets.yaml"
+  - name: artifact-caching-proxy-test
+    namespace: artifact-caching-test
+    chart: jenkins-infra/artifact-caching-proxy
+    version: 0.0.10
+    values:
+      - "../config/artifact-caching-proxy-common.yaml"
+      - "../config/artifact-caching-proxy-test.yaml"
+    secrets:
+      - "../secrets/config/artifact-caching-proxy/secrets.yaml"
