--- a/config/artifact-caching-proxy-test.yaml
+++ b/config/artifact-caching-proxy-test.yaml
@@ -9,14 +9,14 @@ ingress:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/whitelist-source-range: "88.172.134.5/32"
   hosts:
-    - host: repo.azure.jenkins.io
+    - host: repo.test.jenkins.io
       paths:
         - path: /
           pathType: Prefix
   tls:
     - secretName: tls-secret
       hosts:
-        - repo.azure.jenkins.io
+        - repo.test.jenkins.io
 
 persistence:
   storageClass: managed-csi-premium
