--- a/config/artifact-caching-proxy-do.yaml
+++ b/config/artifact-caching-proxy-do.yaml
@@ -1,6 +1,6 @@
 ingress:
   enabled: true
-  # className: public-nginx # TODO: change to a dedicated ingressClassName
+  className: public-nginx
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
