--- a/clusters/doks.yaml
+++ b/clusters/doks.yaml
@@ -6,9 +6,30 @@ helmDefaults:
 repositories:
   - name: datadog
     url: https://helm.datadoghq.com
+  - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
+  - name: jetstack
+    url: https://charts.jetstack.io
 releases:
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.9.1
+    set:
+      - name: installCRDs
+        value: true
+  - name: acme
+    namespace: cert-manager
+    chart: jenkins-infra/acme
+    version: 0.1.2
+    needs:
+      - cert-manager
+    values:
+      - "../config/acme.yaml"
+    secrets:
+      - "../secrets/config/acme/secrets.yaml"
   - name: docker-registry-secrets
     #this helmchart doesn't create any resources within the namespace specified below.
     #specifying a namespace is required by the "needs" feature of helmfile (to allow referencing to this release from others)
@@ -38,3 +59,20 @@ releases:
     version: 0.2.1
     secrets:
       - "../secrets/config/jenkins-kubernetes-agents/secrets.yaml"
+  - name: public-nginx-ingress
+    namespace: public-nginx-ingress
+    chart: ingress-nginx/ingress-nginx
+    version: 4.2.1
+    values:
+      - "../config/ext_public-nginx-ingress_doks.yaml"
+  - name: artifact-caching-proxy-do
+    namespace: artifact-caching-proxy-do
+    chart: jenkins-infra/artifact-caching-proxy
+    version: 0.0.10
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
+    values:
+      - "../config/artifact-caching-proxy-common.yaml"
+      - "../config/artifact-caching-proxy-do.yaml"
+    secrets:
+      - "../secrets/config/artifact-caching-proxy/secrets.yaml"
