--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -39,13 +39,13 @@ releases:
     chart: ingress-nginx/ingress-nginx
     version: 4.2.1
     values:
-      - "../config/ext_public-nginx-ingress.yaml"
+      - "../config/ext_public-nginx-ingress_prodpublick8s.yaml"
   - name: private-nginx-ingress
     namespace: private-nginx-ingress
     chart: ingress-nginx/ingress-nginx
     version: 4.2.1
     values:
-      - "../config/ext_private-nginx-ingress.yaml"
+      - "../config/ext_private-nginx-ingress_prodpublick8s.yaml"
   - name: prometheus
     namespace: prometheus
     chart: prometheus-community/prometheus
@@ -268,6 +268,8 @@ releases:
     namespace: artifact-caching-proxy-azure
     chart: jenkins-infra/artifact-caching-proxy
     version: 0.0.10
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
     values:
       - "../config/artifact-caching-proxy-common.yaml"
       - "../config/artifact-caching-proxy-azure.yaml"
@@ -277,6 +279,8 @@ releases:
     namespace: artifact-caching-test
     chart: jenkins-infra/artifact-caching-proxy
     version: 0.0.10
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
     values:
       - "../config/artifact-caching-proxy-common.yaml"
       - "../config/artifact-caching-proxy-test.yaml"
