--- a/updatecli/updatecli.d/docker-images/404.yaml
+++ b/updatecli/updatecli.d/docker-images/404.yaml
@@ -60,7 +60,7 @@ targets:
       file: "config/ext_public-nginx-ingress_temp-privatek8s.yaml"
       key: "defaultBackend.image.tag"
     scmid: default
-  updatePublicNginxIngress404DOKS:
+  updatePublicNginxIngress404Doks:
     name: "Update 404 docker image tag"
     kind: yaml
     spec:
@@ -77,6 +77,7 @@ pullrequests:
       - updatePublicNginxIngress404ProdPublicK8s
       - updatePrivateNginxIngress404TempPrivateK8s
       - updatePublicNginxIngress404TempPrivateK8s
+      - updatePublicNginxIngress404Doks
     spec:
       labels:
         - dependencies
