chore: use external load balancer
Ref: https://github.com/jenkins-infra/helpdesk/issues/2752

--- a/config/ext_public-nginx-ingress_doks.yaml
+++ b/config/ext_public-nginx-ingress_doks.yaml
@@ -28,3 +28,6 @@ controller:
     enabled: true
     default: false
     name: public-nginx
+  service:
+    annotations:
+      kubernetes.digitalocean.com/load-balancer-id: 5f752a5c-028c-4b83-8fb6-64560567779b
