Revert "feat: separate updatecli stages to their own pipeline (#2817)"
This reverts commit 597c733df53f6611d6f0b336e1be1a45c09f194d.

--- a/updatecli/updatecli.d/pod-templates/helmfile.yaml
+++ b/updatecli/updatecli.d/pod-templates/helmfile.yaml
@@ -54,7 +54,7 @@ targets:
     name: Update docker-helmfile in Jenkinsfile
     kind: file
     spec:
-      file: Jenkinsfile_updatecli
+      file: Jenkinsfile_k8s
       # Please note that the patterns are specified as "block scalars" (>) with the last endline trimmed (-) to avoid tedious escaping of simple quotes
       matchpattern: >-
         'jenkinsciinfra/helmfile:(.*)'
@@ -72,4 +72,3 @@ pullrequests:
     spec:
       labels:
         - dependencies
-        - docker-helmfile
