feat: separate updatecli to its own pipeline (#2866)
* feat: separate updatecli to its own pipeline

Ref: https://github.com/jenkins-infra/helpdesk/issues/2778

* add updatecli job for kubernetes-management on infra.ci

* remove redundant 'Management'

* clean Jenkinsfile_updatecli

* remove unused do token credential for kubernetes-management-updatecli

* update updatecli manifest

* set a top folder with one children instead for now until we adapt the job-dsl chart for a 'organization-scanning' kind

* cleanup: remove helmfile image in Jenkinsfile_updatecli
As it's already defined in the 'updatecli' function of the shared pipeline library

* chore: better job description

* fix: quote

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -124,6 +124,17 @@ jobsDefinition:
       helm-charts:
         name: Helm Charts
         description: Custom Helm Charts of the Jenkins Infra
+  updatecli:
+    name: Dependencies Management with Updatecli
+    kind: folder
+    credentials:
+      # Used by updatecli to retrieve AMIs
+      packer-aws-access-key-id: *packer-aws-access-key-id-def
+      # Used by updatecli to retrieve AMIs
+      packer-aws-secret-access-key: *packer-aws-secret-access-key-def
+    children:
+      kubernetes-management:
+        jenkinsfilePath: Jenkinsfile_updatecli
   other-jobs:
     name: Other Jobs
     description: Folder hosting all the jobs not fitting any category
