--- a/updatecli/updatecli.d/pod-templates/helmfile.yaml
+++ b/updatecli/updatecli.d/pod-templates/helmfile.yaml
@@ -50,25 +50,16 @@ targets:
       file: "PodTemplates.yaml"
       key: spec.containers[0].image
     scmid: default
-  updatePipelineImage:
-    name: Update docker-helmfile in Jenkinsfile
-    kind: file
-    spec:
-      file: Jenkinsfile_k8s
-      # Please note that the patterns are specified as "block scalars" (>) with the last endline trimmed (-) to avoid tedious escaping of simple quotes
-      matchpattern: >-
-        'jenkinsciinfra/helmfile:(.*)'
-      replacepattern: >-
-        'jenkinsciinfra/helmfile:{{ source `lastRelease` }}'
-    scmid: default
 
 pullrequests:
   default:
     kind: github
     scmid: default
+    title: Bump jenkins-infra helmfile docker image to {{ source `lastRelease` }}
     targets:
       - updatePodImage
       - updatePipelineImage
     spec:
       labels:
         - dependencies
+        - docker-helmfile
