--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -10,6 +10,8 @@ repositories:
     url: https://helm.datadoghq.com
   - name: eks
     url: https://aws.github.io/eks-charts
+  - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
 releases:
