feat: add plugin-health-scoring Docker build on infra.ci.jenkins.io
Ref: https://github.com/jenkins-infra/helpdesk/issues/3114

--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -48,6 +48,7 @@ jobsDefinition:
       docker-plugins-self-service:
       docker-rsyncd:
       rating:
+      plugin-health-scoring:
   infra-tools:
     name: Infrastructure Tooling Jobs
     description: Folder hosting all the Infrastructure Tools jobs
