feat: add plugin-health-scoring Docker build on infra.ci.jenkins.io (#2889)

--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -47,6 +47,7 @@ jobsDefinition:
       docker-plugin-site-issues:
       docker-plugins-self-service:
       docker-rsyncd:
+      plugin-health-scoring:
       rating:
   infra-tools:
     name: Infrastructure Tooling Jobs
