feat: add dosk-public Kubernetes cluster
Move artifact-caching-proxy from doks to doks-public

Created the corresponding kubeconfig, saved in charts-secrets

Ref: https://github.com/jenkins-infra/helpdesk/issues/2752

--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -62,8 +62,8 @@ releases:
     version: 4.2.5
     values:
       - "../config/ext_public-nginx-ingress_doks.yaml"
-  - name: artifact-caching-proxy-aws
-    namespace: artifact-caching-proxy-aws
+  - name: artifact-caching-proxy
+    namespace: artifact-caching-proxy
     chart: jenkins-infra/artifact-caching-proxy
     version: 0.0.13
     needs:
