--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -114,6 +114,10 @@ jobsDefinition:
             fileName: "kubeconfig"
             description: "Kubeconfig file for doks"
             secretBytes: "${base64:${KUBECONFIG_DOKS}}"
+          kubeconfig-doks-public:
+            fileName: "kubeconfig"
+            description: "Kubeconfig file for doks"
+            secretBytes: "${base64:${KUBECONFIG_DOKS_PUBLIC}}"
           kubeconfig-prodpublick8s:
             fileName: "kubeconfig"
             description: "Kubeconfig file for prodpublick8s"
