fixup: correct target for artifact-caching-proxy on DigitalOcean

--- a/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
+++ b/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
@@ -26,7 +26,7 @@ targets:
     scmid: default
     spec:
       files:
-        - clusters/doks.yaml
+        - clusters/doks-public.yaml
         - clusters/prodpublick8s.yaml
       matchpattern: 'chart: jenkins-infra\/artifact-caching-proxy((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/artifact-caching-proxy${1}version: {{ source "lastChartVersion" }}'
