feat: add eks-public cluster with artifact-caching-proxy
Ref: https://github.com/jenkins-infra/helpdesk/issues/2752

--- a/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
+++ b/updatecli/updatecli.d/charts/artifact-caching-proxy.yaml
@@ -28,6 +28,7 @@ targets:
     spec:
       files:
         - clusters/doks-public.yaml
+        - clusters/eks-public.yaml
         - clusters/prodpublick8s.yaml
       matchpattern: 'chart: jenkins-infra\/artifact-caching-proxy((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: jenkins-infra/artifact-caching-proxy${1}version: {{ source "lastChartVersion" }}'
