--- a/clusters/eks-public.yaml
+++ b/clusters/eks-public.yaml
@@ -4,8 +4,12 @@ helmDefaults:
   timeout: 300
   wait: true
 repositories:
+  - name: autoscaler
+    url: https://kubernetes.github.io/autoscaler
   - name: datadog
     url: https://helm.datadoghq.com
+  - name: eks
+    url: https://aws.github.io/eks-charts
   - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
   - name: jenkins-infra
@@ -23,6 +27,26 @@ releases:
       - "../config/docker-registry-secrets.yaml"
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
+  - name: autoscaler
+    namespace: autoscaler
+    chart: autoscaler/cluster-autoscaler
+    version: 9.21.0
+    values:
+      - "../config/ext_autoscaler_eks-public.yaml"
+  - name: aws-node-termination-handler
+    namespace: eks
+    chart: eks/aws-node-termination-handler
+    version: 0.19.3
+    values:
+      - "../config/ext_aws-node-termination-handler_eks-public.yaml"
+  # https://github.com/aws/eks-charts/tree/master/stable/aws-load-balancer-controller
+  # # If not using IAM Roles for service account
+  # helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=jenkins-infra-public-ENRZrfwf -n kube-system
+  - name: aws-load-balancer-controller
+    namespace: kube-system
+    version: 2.4.3
+    values:
+      - "../config/ext_aws-load-balancer-controller.yaml"
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
@@ -37,7 +61,7 @@ releases:
     needs:
       - cert-manager
     values:
-      - "../config/acme_doks-public.yaml"
+      - "../config/acme_eks-public.yaml"
   - name: datadog
     namespace: datadog
     chart: datadog/datadog
@@ -46,23 +70,23 @@ releases:
       - default/docker-registry-secrets
     values:
       - "../config/ext_datadog.yaml.gotmpl"
-      - "../config/ext_datadog_doks-public.yaml"
+      - "../config/ext_datadog_eks-public.yaml"
     secrets:
-      - "../secrets/config/datadog/doks-public-secrets.yaml"
+      - "../secrets/config/datadog/eks-secrets.yaml"
   - name: public-nginx-ingress
     namespace: public-nginx-ingress
     chart: ingress-nginx/ingress-nginx
     version: 4.2.5
     values:
-      - "../config/ext_public-nginx-ingress_doks-public.yaml"
+      - "../config/ext_public-nginx-ingress_eks-public.yaml"
   - name: artifact-caching-proxy
     namespace: artifact-caching-proxy
     chart: jenkins-infra/artifact-caching-proxy
-    version: 0.1.1
+    version: 0.0.14
     needs:
       - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
     values:
       - "../config/artifact-caching-proxy__common.yaml"
-      - "../config/artifact-caching-proxy_do.yaml"
+      - "../config/artifact-caching-proxy_aws.yaml"
     secrets:
       - "../secrets/config/artifact-caching-proxy/secrets.yaml"
