--- a/updatecli/updatecli.d/charts/aws-node-termination-handler.yaml
+++ b/updatecli/updatecli.d/charts/aws-node-termination-handler.yaml
@@ -26,7 +26,9 @@ targets:
     kind: file
     scmid: default
     spec:
-      file: clusters/cik8s.yaml
+      files:
+        - clusters/cik8s.yaml
+        - clusters/eks-public.yaml
       matchpattern: 'chart: eks\/aws-node-termination-handler((\r\n|\r|\n)(\s+))version: .*'
       replacepattern: 'chart: eks/aws-node-termination-handler${1}version: {{ source "lastChartVersion" }}'
 
