--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -29,6 +29,8 @@ targets:
       files:
         - clusters/cik8s.yaml
         - clusters/doks.yaml
+        - clusters/doks-public.yaml
+        - clusters/eks-public.yaml
         - clusters/prodpublick8s.yaml
         - clusters/temp-privatek8s.yaml
       matchpattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
