Apply suggestions from code review
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/docker-images/datadog.yaml
+++ b/updatecli/updatecli.d/docker-images/datadog.yaml
@@ -38,7 +38,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    title: Bump `datadog`` docker image version to {{ source "latestRelease" }}
+    title: Bump `datadog` docker image version to {{ source "latestDigest" }}
     spec:
       labels:
         - dependencies
