--- a/updatecli/updatecli.d/charts/nginx-ingress.yaml
+++ b/updatecli/updatecli.d/charts/nginx-ingress.yaml
@@ -1,4 +1,4 @@
-title: Bump nginx-ingress helm chart
+name: Bump nginx-ingress helm chart
 
 scms:
   default:
@@ -37,8 +37,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
-    targets:
-      - updateChartVersion
+    title: Bump `nginx-ingress` helm chart version to {{ source "lastChartVersion" }}
     spec:
       labels:
         - dependencies
