--- a/.github/workflows/pr-updater.yaml
+++ b/.github/workflows/pr-updater.yaml
@@ -10,9 +10,9 @@ jobs:
   autoupdate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: update all pull requests except those with the label 'prevent-pr-updater' and those in draft
         uses: maxkomarychev/pr-updater-action@v1.0.0
-        if: !contains(github.event.pull_request.labels.*.name, 'prevent-pr-updater') && !github.event.pull_request.draft
+        if: (!contains(github.event.pull_request.labels.*.name, 'prevent-pr-updater') && !github.event.pull_request.draft)
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
