--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -172,6 +172,9 @@ jobsDefinition:
             username: "${ARTIFACTORY_API_INFRA_REPORTS_USERNAME}"
             usernameSecret: true
             password: "${ARTIFACTORY_API_INFRA_REPORTS_PASSWORD}"
+      backend-extension-indexer:
+        name: "Backend Extension Indexer"
+        jenkinsfilePath: Jenkinsfile.infra.ci.jenkins.io
       fork-report:
         name: "GitHub Forks Report"
         repository: "infra-reports"
@@ -213,6 +216,9 @@ jobsDefinition:
           githubapp-jenkins-infra-reports-app-identifier:
             description: "Identifier (integer) of the Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
             secret: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_ID}"
+      pipeline-steps-doc-generator:
+        name: "Pipeline Steps Documentation Generator"
+        jenkinsfilePath: Jenkinsfile.infra.ci.jenkins.io
       plugin-migration:
         name: "Plugin Migration Status Report"
         repository: "infra-reports"
