--- a/config/ext_aws-load-balancer-controller.yaml
+++ b/config/ext_aws-load-balancer-controller.yaml
@@ -1,1 +1,8 @@
-clusterName: jenkins-infra-public-Y9wILECh
+# https://github.com/jenkins-infra/aws/blob/e17045dab632d8e939f16ca7ade65ecf65ac4118/eks-public-cluster.tf#L11
+clusterName: jenkins-infra-public-xkB8sCwz
+serviceAccount:
+  create: true
+  name: aws-load-balancer-controller
+  annotations: 
+    # This value should match the ARN of the role created by module.iam_assumable_role_admin in iam-role-nlb.tf
+    eks.amazonaws.com/role-arn: "arn:aws:iam::200564066411:role/aws-load-balancer-controller"
