--- a/clusters/eks-public.yaml
+++ b/clusters/eks-public.yaml
@@ -27,12 +27,12 @@ releases:
       - "../config/docker-registry-secrets.yaml"
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
-  - name: autoscaler
-    namespace: autoscaler
-    chart: autoscaler/cluster-autoscaler
-    version: 9.21.0
-    values:
-      - "../config/ext_autoscaler_eks-public.yaml"
+  # - name: autoscaler
+  #   namespace: autoscaler
+  #   chart: autoscaler/cluster-autoscaler
+  #   version: 9.21.0
+  #   values:
+  #     - "../config/ext_autoscaler_eks-public.yaml"
   - name: aws-node-termination-handler
     namespace: eks
     chart: eks/aws-node-termination-handler
@@ -47,16 +47,17 @@ releases:
   - name: aws-load-balancer-controller
     namespace: nlb
     chart: eks/aws-load-balancer-controller
-    version: 1.4.4
+    version: 1.4.5
     values:
       - "../config/ext_aws-load-balancer-controller.yaml"
-  - name: cert-manager
-    namespace: cert-manager
-    chart: jetstack/cert-manager
-    version: v1.9.1
-    set:
-      - name: installCRDs
-        value: true
+      - clusterName: public-blessed-bullfrog
+  # - name: cert-manager
+  #   namespace: cert-manager
+  #   chart: jetstack/cert-manager
+  #   version: v1.9.1
+  #   set:
+  #     - name: installCRDs
+  #       value: true
   # - name: acme
   #   namespace: cert-manager
   #   chart: jenkins-infra/acme
@@ -76,20 +77,20 @@ releases:
   #     - "../config/ext_datadog_eks-public.yaml"
   #   secrets:
   #     - "../secrets/config/datadog/eks-public-secrets.yaml"
-  # - name: public-nginx-ingress
-  #   namespace: public-nginx-ingress
-  #   chart: ingress-nginx/ingress-nginx
-  #   version: 4.2.5
-  #   values:
-  #     - "../config/ext_public-nginx-ingress_eks-public.yaml"
-  # - name: artifact-caching-proxy
-  #   namespace: artifact-caching-proxy
-  #   chart: jenkins-infra/artifact-caching-proxy
-  #   version: 0.1.0
-  #   # needs:
-  #   #   - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
-  #   values:
-  #     - "../config/artifact-caching-proxy__common.yaml"
-  #     - "../config/artifact-caching-proxy_aws.yaml"
-  #   secrets:
-  #     - "../secrets/config/artifact-caching-proxy/secrets.yaml"
+  - name: public-nginx-ingress
+    namespace: public-nginx-ingress
+    chart: ingress-nginx/ingress-nginx
+    version: 4.2.5
+    values:
+      - "../config/ext_public-nginx-ingress_eks-public.yaml"
+  - name: artifact-caching-proxy
+    namespace: artifact-caching-proxy
+    chart: jenkins-infra/artifact-caching-proxy
+    version: 0.1.0
+    # needs:
+    #   - public-nginx-ingress/public-nginx-ingress # Required to expose the proxy
+    values:
+      - "../config/artifact-caching-proxy__common.yaml"
+      - "../config/artifact-caching-proxy_aws.yaml"
+    secrets:
+      - "../secrets/config/artifact-caching-proxy/secrets.yaml"
