--- a/config/ext_autoscaler_eks-public.yaml
+++ b/config/ext_autoscaler_eks-public.yaml
@@ -12,8 +12,7 @@ rbac:
     name: cluster-autoscaler-aws-cluster-autoscaler-chart
     annotations:
       # This value should match the ARN of the role created by module.iam_assumable_role_admin in irsa.tf
-      eks.amazonaws.com/role-arn: "arn:aws:iam::200564066411:role/cluster-autoscaler"
+      eks.amazonaws.com/role-arn: "arn:aws:iam::200564066411:role/cluster-autoscaler-eks-public"
 
 autoDiscovery:
-  clusterName: jenkins-infra-public-Y9wILECh
   enabled: true
