chore(doks,cik8s) use set for jenkins-agents instead of a full file
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/cik8s.yaml
+++ b/clusters/cik8s.yaml
@@ -20,7 +20,10 @@ releases:
     chart: jenkins-infra/docker-registry-secrets
     version: 0.1.0
     values:
-      - "../config/docker-registry-secrets-with-jenkins-agents-ns.yaml"
+      - "../config/docker-registry-secrets.yaml"
+    set:
+      - name: "imageCredentials.namespaces[1]"
+        value: jenkins-agents
     secrets:
       - "../secrets/config/docker-registry-secrets/secrets.yaml"
   - name: datadog
